ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/District_Master__c.object-meta.xml
<CustomObject>
    <label>District Master</label>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>District Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>