ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/fields/District_Category__c.field-meta.xml
<CustomField>
    <fullName>District_Category__c</fullName>
    <label>District Category</label>
    <length>15</length>
    <type>Text</type>
</CustomField>