ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/fields/District_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Code__c</fullName>
    <externalId>true</externalId>
    <label>District_Code</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>