ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/fields/Geo_State_Master__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geo_State_Master</label>
    <referenceTo>Geo_State_Masters__c</referenceTo>
    <relationshipName>Districts</relationshipName>
    <type>Lookup</type>
</CustomField>