ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>District_Code__c</columns>
    <columns>NAME</columns>
    <columns>Geo_State_Master__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geo_State_Master__c</field>
        <operation>startsWith</operation>
        <value>kera</value>
    </filters>
    <label>All</label>
</ListView>