ProdIND/ProdPrograms/force-app/main/default/objects/District_Master__c/listViews/All_Districts.listView-meta.xml
<ListView>
    <fullName>All_Districts</fullName>
    <columns>District_Code__c</columns>
    <columns>NAME</columns>
    <columns>Geo_State_Master__c</columns>
    <columns>District_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Districts</label>
</ListView>